@@ -1,4 +1,5 @@
 DIST slack-term-0.4.1.tar.gz 245741 BLAKE2B 6601e0673ab2bfee780fc89325a40581ca4bcef1a93f81b6f26348b4de71ea5113fe958a15c4a015ca75f28b3869f3de0bf56b89f205781583577baac1bb251b SHA512 360a20a2d09167b84e4f14812313d0d12c0ba625471de8c87415b11a2ab6dd879487d4ea8e9fd1230b51f20012bda0800f3f1d147f62c0828b855663b1bb9a06
 EBUILD slack-term-0.4.1.ebuild 833 BLAKE2B e071cf7c031bb8e7c21d7e2bba38885d1fab9d9ff1ef4ed53c9766ddf1e85af5d03fb9b09a34f4776098809d5a27b26e7c1221c30d0d870f41aa66d77cce192b SHA512 9b2c3496a49957f4d5d9bda3210704a3ac9a8e61b2747db071f629bede8d4f70396fd152dab3790704c54155f09026cfbe795fbc4e92374732f373bf0488b6e9
-MISC ChangeLog 259 BLAKE2B 17333ceb2d4b6395522b1e00e109086a3cfbcc148985c8687ab8f90a325d640c99c6b4bcb0c16c7d177478870d10611e3040bccd779106e5c50ecfa6d7cecfc0 SHA512 552738e664ffe7dc8c5ef31c27c8e503a37193ae388dfe2379c08d418fdaf92a32f087fd1518c2b2981d912198a108f73900ac233c23b2daf52a474b4dccd7cb
+EBUILD slack-term-9999.ebuild 833 BLAKE2B e071cf7c031bb8e7c21d7e2bba38885d1fab9d9ff1ef4ed53c9766ddf1e85af5d03fb9b09a34f4776098809d5a27b26e7c1221c30d0d870f41aa66d77cce192b SHA512 9b2c3496a49957f4d5d9bda3210704a3ac9a8e61b2747db071f629bede8d4f70396fd152dab3790704c54155f09026cfbe795fbc4e92374732f373bf0488b6e9
+MISC ChangeLog 385 BLAKE2B c2bd56ae99b49ff22c2c39b64dfcaf47a944fa8e54f2465bbda2f6406c7d68f18f456bb1c1941600f9c01a390962f576d325e0c6c20c588c968d8fac728b833b SHA512 0e73b6895d150e0b1de02e9013402e3142a36cb379b789525344ff56ac9e3336bceab9144e46e9abe1efcdcd8f66e28d80c44d7a78299fefd89e40ffe73a647e
 MISC metadata.xml 626 BLAKE2B d1a3711ec89906d83dd77db46f4d517110e54cc001620c839c6699fcea5f99708df666d91ca507572b12da2bc5f2039b66c35b001cb783f99942e23796511c45 SHA512 7253bb22ab2062635673e93e6198856cf2b2bc4a5e964d69ee5bd711a7df652fa237c783a516689228dd6d6775aa00bb0a3d94abe8e3997ad2b62a6a7a600562
